Add bold font (#67)

--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -9,6 +9,7 @@ $startEndFontColor: black;
 $onlineGalleryBarBackgroundColor: $startEndBackgroundColor;
 
 $fontFamily: 'WorkSans-Medium';
+$fontFamilyBold: 'WorkSans-Bold';
 $fontSize: 22;
 $letterSpacing:-0.01;
 
