--- a/app/pages/home/home-page.scss
+++ b/app/pages/home/home-page.scss
@@ -20,7 +20,7 @@
 .steps {
     .app-name {
         color: black;
-        font-weight: bold;
+        font-family: $fontFamilyBold;
         letter-spacing: 0.04;
         horizontal-align: center;
         text-align: center;
