--- a/app/pages/background/background-page.scss
+++ b/app/pages/background/background-page.scss
@@ -24,7 +24,7 @@
     }
 
     .picture-title {
-        font-weight: bold;
+        font-family: $fontFamilyBold;
         line-height: 1.20;
         margin-bottom: 32;
     }
