Change animation speed (#70)

--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -31,6 +31,8 @@ $actionbarSecondaryFontColor: #ff3232;
 
 $fakeActionBarMarginTop: -1 * $actionbarHeight / 2;
 
-$animationDuration: 1s;
+$animationDuration: .1s;
+
+$animationDurationLong: .4s;
 
 $dangerColor: red;
