Add background mask on homepage (#69)

--- a/app/pages/home/home-page.scss
+++ b/app/pages/home/home-page.scss
@@ -28,6 +28,11 @@
     }
 }
 
+.background-mask {
+    background-color: $actionbarBackgroundColor;
+    border-radius: 0;
+}
+
 .home-page-layout {
     .home-page-layout-main {
         align-items: center;
