--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -20,6 +20,7 @@ $buttonWrapperPadding: 25; // right and left for button without icon; only left 
 $buttonWrapperHeight: $buttonIconSize + 2 * $buttonIconPadding;
 
 $badgeSize: 38;
+$badgeFontSize: 8;
 
 $ovalColor: $mainBackgroundColor;
 
