--- a/app/pages/background/background-page.scss
+++ b/app/pages/background/background-page.scss
@@ -25,6 +25,7 @@
 
     .picture-title {
         font-family: $fontFamilyBold;
+        letter-spacing: $letterSpacingBold;
         line-height: 1.20;
         margin-bottom: 32;
     }
